<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_generate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_clubs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/line2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/layout_first_club"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_first_club"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/club_default"
                tools:srcCompat="@drawable/club_default"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/name_first_club"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/division_first_club"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/country_first_club"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/layout_strength_first_club"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <ImageView
                    android:id="@+id/first_club_star_1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/star_empty"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/first_club_star_2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/star_empty"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/first_club_star_3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/star_empty"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/first_club_star_4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/star_empty"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/first_club_star_5"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/star_empty"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/sex_image"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            tools:ignore="ContentDescription,ImageContrastCheck"
            tools:srcCompat="@android:color/transparent" />

        <LinearLayout
            android:id="@+id/layout_second_club"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_second_club"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/club_default"
                tools:ignore="ContentDescription,ImageContrastCheck"
                tools:srcCompat="@drawable/club_default" />

            <TextView
                android:id="@+id/name_second_club"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/division_second_club"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/country_second_club"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/layout_strength_second_club"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <ImageView
                    android:id="@+id/second_club_star_1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/star_empty"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/second_club_star_2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/star_empty"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/second_club_star_3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/star_empty"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/second_club_star_4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/star_empty"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/second_club_star_5"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/star_empty"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="#2e50be"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_clubs" />

    <LinearLayout
        android:id="@+id/layout_minimum_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/line2"
        app:layout_constraintStart_toStartOf="@+id/line2"
        app:layout_constraintTop_toBottomOf="@+id/line2">

        <TextView
            android:id="@+id/minimum_strength_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/MINIMUM_STRENGTH"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout_minimum_strength_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/minimum_strength_star_1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/star_half_full"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/minimum_strength_star_2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/star_empty"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/minimum_strength_star_3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/star_empty"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/minimum_strength_star_4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/star_empty"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/minimum_strength_star_5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/star_empty"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_maximum_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/layout_minimum_strength"
        app:layout_constraintStart_toStartOf="@+id/layout_minimum_strength"
        app:layout_constraintTop_toBottomOf="@+id/layout_minimum_strength">

        <TextView
            android:id="@+id/maximum_strength_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/MAXIMUM_STRENGTH"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout_maximum_strength_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/maximum_strength_star_1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/star_full"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/maximum_strength_star_2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/star_full"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/maximum_strength_star_3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/star_full"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/maximum_strength_star_4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/star_full"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/maximum_strength_star_5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/star_full"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_country_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_maximum_strength">

        <TextView
            android:id="@+id/text_country_fiilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/Country"
            android:textColor="@color/white" />

        <Spinner
            android:id="@+id/spinner_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:popupBackground="#1c1c27"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_division_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/layout_country_filter"
        app:layout_constraintStart_toStartOf="@+id/layout_country_filter"
        app:layout_constraintTop_toBottomOf="@+id/layout_country_filter">

        <TextView
            android:id="@+id/text_division_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/Division"
            android:textColor="@color/white" />

        <Spinner
            android:id="@+id/spinner_division"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:popupBackground="#1c1c27"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/generate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#2e50be"
        android:text="@string/GENERATE_MATCH"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner_game"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/transparent"
        android:popupBackground="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/generate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/generate_button"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/adv_filter"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/advanced_settings"
        app:layout_constraintBottom_toBottomOf="@+id/generate_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/generate_button"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/adv_filter_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>